--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,67 @@
     box-sizing: border-box;
 }
 
+:root{
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Open Sans', sans-serif;
+}
+.contenedor{
+    width:90%;
+    max-width: 1200px;
+    overflow: hidden;
+    margin: auto;
+    padding: 60px 0;;
+}
+
+header{
+    height: 100vh;
+    background-image: linear-gradient(120deg, rgba(161, 196, 253, 0.301) 0%, #c2e9fb78 100%),url(../img/img3.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+}
+.head{
+    padding: 0;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #fff;
+
+}
+.hamburger{
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    background: #fff;
+    width: 40px;
+    cursor: pointer;
+    border-radius: 10px ;
+    box-shadow: 0 0 6px rgba(0, 0, 0, .5);
+
+}
+.menu-navegacion{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 20vw;
+    height: 100%;
+    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    transition: transform .3s ease-in-out;
+    box-shadow: rgba(0, 0, 0, .5);
+
+
+}
+
+header:hover .menu-navegacion{
+    transform: translate(110%);
 }
