--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,70 +1,69 @@
-*{
-    margin:0;
+* {
+    margin: 0; 
     padding: 0;
     box-sizing: border-box;
 }
 
-:root{
-    scroll-behavior: smooth;
+body { 
+    min-height: 100vh;
+    background-image: linear-gradient(-45deg, #e3ddd9 50%, #00a3de 50%);
+    font-family: 'Raleway', sans-serif;
 }
 
-body{
-    font-family: 'Open Sans', sans-serif;
-}
-.contenedor{
-    width:50%;
-    max-width: 1200px;
-    overflow: hidden;
-    margin: auto;
-    padding: 40px 0;;
+.titulo {
+    font-size: 40px;
+    font-family: 'Dancing Script', cursive;
+    margin-bottom: 40px;
+    color: #fff;
 }
 
-header{
-    height: 100vh;
-    background-image: linear-gradient(120deg, rgba(161, 196, 253, 0.301) 0%, #c2e9fb78 100%),url(../img/img3.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
+.subtitulo {
+    margin: 0;
+    color: #000;
+    display: inline;
+    font-size: 50px;
+    font-weight: 500;
+    text-transform: uppercase;
 }
-.head{
-    padding: 0;
-    height: 100%;
+
+.sabor { 
+    color: #fff;
+    margin: 7px 0;
+    font-size: 50px;
+    font-weight: 600;
+    text-shadow: 2px 2px 1px rgba(0,0,0,0.7);
+    font-family: 'Dancing Script', cursive;
+    margin-top: 0;
+}
+
+.linea-division {
+    width: 80%;
+    height: 2px;
+    background-color: #36221c;
+}
+.carousel{
+    min-height: 700px;
+}
+
+/* Estilos Materialize*/
+.carousel .carousel-item {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    color: #fff;
-
+    user-select: none;
+    
+    width: 500px;
+    height: 500px;
 }
-.hamburger{
-    position: fixed;
-    top: 30px;
-    right: 30px;
-    background: #fff;
-    width: 40px;
-    cursor: pointer;
-    border-radius: 10px ;
-    box-shadow: 0 0 6px rgba(0, 0, 0, .5);
 
-}
-.menu-navegacion{
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 20vw;
+.carousel .carousel-item img{
+    width: 100%;
     height: 100%;
-    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    transition: transform .3s ease-in-out;
-    box-shadow: rgba(0, 0, 0, .5);
-
-
-}
-
-header:hover .menu-navegacion{
-    transform: translate(110%);
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 15px;
 }
