--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,11 +19,12 @@ body {
 
 .subtitulo {
     margin: 0;
-    color: #000;
+    color: rgb(97, 19, 19);
     display: inline;
     font-size: 50px;
     font-weight: 500;
     text-transform: uppercase;
+    
 }
 
 .sabor { 
@@ -42,23 +43,24 @@ body {
     background-color: #36221c;
 }
 .carousel{
-    min-height: 700px;
+    min-height: 500px;
 }
 
 /* Estilos Materialize*/
 .carousel .carousel-item {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content:center;
     align-items: center;
     user-select: none;
+    
     
     width: 500px;
     height: 500px;
 }
 
 .carousel .carousel-item img{
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     object-fit: cover;
     position: absolute;
@@ -66,4 +68,11 @@ body {
     left: 0;
     z-index: -1;
     border-radius: 15px;
+}
+
+.carousel .indicators .indicator-item{
+    border-radius: 0;
+    transform: rotate(45deg);
+    margin: 0 15px;
+    background: #0a16c8;
 }
