--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,7 +14,8 @@ body {
     font-size: 50px;
     font-family: 'Dancing Script', cursive;
     margin-top: 20px;
-    margin-bottom: -98%;
+    margin-bottom:-4vh;
+    
     color: #fff;
 }
 
@@ -48,7 +49,7 @@ body {
     background-color: #00caee;
 }
 .carousel{
-    min-height: 200px;
+    min-height: 300px;
 }
 
 /* Estilos Materialize*/
@@ -60,8 +61,8 @@ body {
     user-select: none;
     
     
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
 }
 
 .carousel .carousel-item img{
@@ -78,7 +79,8 @@ body {
 .carousel .indicators .indicator-item{
     border-radius: 0;
     transform: rotate(45deg);
-    margin: 0 10px;
+    margin: 10 50px;
     background: #2093ff;
-    margin-bottom: 15%
+    
+    
 }
